CS35200/tests/project2_3_tests/neg/neg_bad_return.java
class Main {
    public static void main(String[] args) {
        A a = new A();
        int b = a.a();  // No error
    }
}

class A {
    int a() {
        return "hello"; // Error
    }
}